--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <form>
+    <label>
+      <input type="checkbox" name="topping" value="reading"> Mushrooms
+    </label><br>
+    <label>
+      <input type="checkbox" name="topping" value="sports"> Pepper
+    </label><br>
+  </form>
+</body>
+
+</html>
