--- a/index.html
+++ b/index.html
@@ -9,12 +9,29 @@
 </head>
 
 <body>
+  <h1>Piiiiiiiizzzzzza inc.</h1>
+  <h2>Choose Your Size...</h2>
   <form>
     <label>
-      <input type="checkbox" name="topping" value="reading"> Mushrooms
+      <input type="radio" name="size" value="small"> Small
     </label><br>
     <label>
-      <input type="checkbox" name="topping" value="sports"> Pepper
+      <input type="radio" name="size" value="medium" checked> Medium
+    </label><br>
+    <label>
+      <input type="radio" name="size" value="large"> Large
+    </label><br>
+    
+  <h2>Choose Your Toppings...</h2>
+  <form>
+    <label>
+      <input type="checkbox" name="topping" value="mushroom"> Mushrooms
+    </label><br>
+    <label>
+      <input type="checkbox" name="topping" value="olives"> Olives
+    </label><br>
+    <label>
+      <input type="checkbox" name="topping" value="grilledonions"> Grilled Onions
     </label><br>
   </form>
 </body>
