--- a/display.html
+++ b/display.html
@@ -1,27 +1,11 @@
+
 <html>
-
-		<body onload="showPrice()">
-		<body>
-
-				<h3 id = "displayName"></h3>
-
-
-				<script>
-
-				function showPrice() {
-		const params = new URLSearchParams(window.location.search); //Extracts query parameters from the URL.
-		const price = params.get("price") || "Invalid";
-		document.getElementById("displayName").textContent = price + "!";
-}
-
-
-
-
-				</script>
-
-
-		</body>
-
-
-
+<head>
+    <title>Order Confirmation</title>
+</head>
+<body>
+    <h1 id="greeting">Thank you, human!</h1>
+    
+    <button onclick="window.location.href='index.html'">Finish and Return Home</button>
+</body>
 </html>
